--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yumii.saiko/wrappu",
-  "version": "1.2.4",
+  "version": "1.3.2",
   "author": "yumii.saiko <yumii.saiko@gmail.com>",
   "homepage": "https://github.com/YumeT023/wrappu#readme",
   "license": "MIT",
@@ -28,8 +28,12 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.2.4",
+    "@types/which": "^2.0.2",
     "jest": "^29.2.1",
     "prettier": "^2.7.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "which": "^3.0.0"
   }
 }
